# AutoSpool

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
boards/: nucleo_l152re.overlay
dts/bindings/: pwm-servo.yaml
inc/: drv8838.hpp  gpio.hpp  heartbeat.hpp  main.hpp  message_queue.hpp  motor.hpp  motor_types.hpp  pwm.hpp
src/: drv8838.cpp  gpio.cpp  heartbeat.cpp  main.cpp  message_queue.cpp  pwm.cpp  shell.cpp
